--- a/ProyectoFinal_Hotel/src/Interfaces_Vistas/datosCategoria.form
+++ b/ProyectoFinal_Hotel/src/Interfaces_Vistas/datosCategoria.form
@@ -221,6 +221,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCtipohabitacionActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;TipoHabitacion&gt;"/>
       </AuxValues>
